# cpp-task-manager

./: .gitignore  CMakeLists.txt  Date.cpp  README.md  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  main.cpp
data/: tasks.json
qt-ver/: CMakeLists.txt  helpwindow.cpp  helpwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  task.cpp  task.h  taskblock.cpp  taskblock.h  taskblock.ui  taskmanager.cpp  taskmanager.h
qt-ver/nlohmann/: json.hpp
terminal-ver/: Date.h  Task.cpp  main.cpp
terminal-ver/data/: tasks.json
